Code changes to ensure Goonj DispatchStatus sync Post request is generated for Avni.